fix(image):hide side logo on mobile

--- a/src/Login/Login.less
+++ b/src/Login/Login.less
@@ -29,6 +29,9 @@
   .login-page__central-content {
     padding: 40px 10px;
   }
+  .login-page__side-box {
+    display:none;
+  } 
 }
 
 .login-page__title {
